# ai_ml_study_resources

./: .gitignore  README.md  pyproject.toml  resources.md
coding_interviews/: README.md  coding_exercises.ipynb  non_coding_questions.md  python_snippets.md
dnn_pytorch/: README.md  pyproject.toml  pytorch_notes.md  recommendation.ipynb
dnn_pytorch/module1/: README.md
dnn_pytorch/module2/: README.md
dnn_pytorch/module3/: 3_multidim_input_nn.ipynb  5_activation_functions_nn.ipynb
dnn_pytorch/module4/: 10_batch_normalization.ipynb  1_dnns.ipynb  2_dnns.ipynb  3_dropout.ipynb  4_dropout_overfitting.ipynb  5_initialization.ipynb  6_initialization_techniques.ipynb  7_initialization_techniques2.ipynb  8_gd_momentum.ipynb  9_nn_momentum.ipynb  README.md
dnn_pytorch/module5/: 1_cnn.ipynb  2_maxpooling.ipynb  3_multi_input_output.ipynb  4_cnn_archit1.ipynb  4_cnn_archit1.ipynbx  5_cnn_mnist.ipynb  6_cnn_batch_normalization.ipynb  README.md
dnn_pytorch/module6_applications/: 1_cnn_anime_classification.ipynb  2_cnn_mnist_classification.ipynb  README.md
miniprototypes/ticket_classifier_v1/: README.md  pyproject.toml
ml_study/: README.md  requirements.txt
ml_study/generator/: ml-ai-system-design-flashcards.py
ml_study/src/: deck.py  study_modes.py
ml_study_flashcards/: README.md  main.py
module1/: 1_rms_bad_initialization.ipynb  2_cross_entropy_loss.ipynb
module2/: 1_softmax_1D.ipynb  2_softmax_2D.ipynb
module3/: 1_1hidden_layer.ipynb  2_nhidden_layers.ipynb  4_multiclass_output_nn.ipynb  README.md
module4/: 1_dnns.ipynb  3_dropout.ipynb  README.md
(+9 files in other folders)
