[project]
name = "pytorch_modules"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
'numpy == 2.2.3',
'matplotlib == 3.10.1',
'torch == 2.5.1',
'torchvision == 0.20.1+cpu'
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" }
torchvision = { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
